After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773347 - The search bar does not have an entry connected to it
The search bar does not have an entry connected to it
Status: RESOLVED FIXED
Product: gnome-logs
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gnome-logs maintainer(s)
gnome-logs maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-10-22 09:27 UTC by Jonathan Kang
Modified: 2016-10-25 03:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Connect search entry to the search bar (1.00 KB, patch)
2016-10-22 09:32 UTC, Jonathan Kang
committed Details | Review

Description Jonathan Kang 2016-10-22 09:27:35 UTC
Lunch Logs on master branch code base, click any keyboard key. The following warning will show up.

> Gtk-WARNING **: The search bar does not have an entry connected to it. Call gtk_search_bar_connect_entry() to connect one.

This is introduced in commit b58ad1fcc1973da8869b39e28b65c751619d3036.
Comment 1 Jonathan Kang 2016-10-22 09:32:41 UTC
Created attachment 338251 [details] [review]
Connect search entry to the search bar
Comment 2 David King 2016-10-24 07:51:34 UTC
Review of attachment 338251 [details] [review]:

Sure, looks fine.
Comment 3 Jonathan Kang 2016-10-25 03:24:05 UTC
Comment on attachment 338251 [details] [review]
Connect search entry to the search bar

Pushed to master as commit 2785efd2a94e4e9fa52fa569bfa8662ae65d312e.