Connect search entry to the search bar

https://bugzilla.gnome.org/show_bug.cgi?id=773347